@@ -52,6 +52,7 @@ struct cfg_line
 	int	max;
 };
 
-int	parse_cfg_file(const char *cfg_file,struct cfg_line *cfg);
+int	parse_cfg_file(const char *cfg_file, struct cfg_line *cfg);
+int	parse_opt_cfg_file(const char *cfg_file, struct cfg_line *cfg);
 
 #endif
