@@ -34,7 +34,7 @@ char usage_message[] = "[-Vhp] [-c <file>] [-t <metric>]";
 #ifndef HAVE_GETOPT_LONG
 char *help_message[] = {
 	"Options:",
-	"  -c <file>     Specify configuration file",
+	"  -c <file>     Specify configuration file. Use absolute path",
 	"  -h            give this help",
 	"  -V            display version number",
 	"  -p            print supported metrics and exit",
@@ -44,7 +44,7 @@ char *help_message[] = {
 #else
 char *help_message[] = {
 	"Options:",
-	"  -c --config <file>  Specify configuration file",
+	"  -c --config <file>  Specify configuration file. Use absolute path",
 	"  -h --help           give this help",
 	"  -V --version        display version number",
 	"  -p --print          print supported metrics and exit",
@@ -76,11 +76,7 @@ void	child_signal_handler( int sig )
 	exit( FAIL );
 }
 
-#ifdef _WINDOWS
-	static char	DEFAULT_CONFIG_FILE[]	= "C:\\zabbix_agent.conf";
-#else /* not _WINDOWS */
-	static char	DEFAULT_CONFIG_FILE[]	= "/etc/zabbix/zabbix_agent.conf";
-#endif /* _WINDOWS */
+static char	DEFAULT_CONFIG_FILE[]	= "/etc/zabbix/zabbix_agent.conf";
 
 void    init_config(void)
 {
@@ -105,8 +101,7 @@ int	main(int argc, char **argv)
 	zbx_sock_t	s_out;
 
 	int		ret;
-	char	**value,
-		*command;
+	char		**value, *command;
 
 	AGENT_RESULT	result;
 
@@ -116,56 +111,58 @@ int	main(int argc, char **argv)
 
 /* Parse the command-line. */
 	while ((ch = (char)zbx_getopt_long(argc, argv, "c:hVpt:", longopts, NULL)) != (char)EOF)
-		switch (ch) {
-		case 'c':
-			CONFIG_FILE = strdup(zbx_optarg);
-			break;
-		case 'h':
-			help();
-			exit(-1);
-			break;
-		case 'V':
-			version();
-			exit(-1);
-			break;
-		case 'p':
-			if(task == ZBX_TASK_START)
-				task = ZBX_TASK_PRINT_SUPPORTED;
-			break;
-		case 't':
-			if(task == ZBX_TASK_START)
-			{
-				task = ZBX_TASK_TEST_METRIC;
-				TEST_METRIC = strdup(zbx_optarg);
-			}
-			break;
-		default:
-			task = ZBX_TASK_SHOW_USAGE;
-			break;
-	}
+		switch (ch)
+		{
+			case 'c':
+				CONFIG_FILE = strdup(zbx_optarg);
+				break;
+			case 'h':
+				help();
+				exit(-1);
+				break;
+			case 'V':
+				version();
+				exit(-1);
+				break;
+			case 'p':
+				if (task == ZBX_TASK_START)
+					task = ZBX_TASK_PRINT_SUPPORTED;
+				break;
+			case 't':
+				if (task == ZBX_TASK_START)
+				{
+					task = ZBX_TASK_TEST_METRIC;
+					TEST_METRIC = strdup(zbx_optarg);
+				}
+				break;
+			default:
+				task = ZBX_TASK_SHOW_USAGE;
+				break;
+		}
 
-	if(CONFIG_FILE == NULL)
-	{
+	if (CONFIG_FILE == NULL)
 		CONFIG_FILE = DEFAULT_CONFIG_FILE;
-	}
 
 	init_metrics(); /* Must be before init_config() */
 
-	if( ZBX_TASK_START == task )
+	if (ZBX_TASK_START == task)
+	{
 		load_config();
-
-	load_user_parameters();
+		load_user_parameters(0);
+	}
 
 	/* Do not create debug files */
-	zabbix_open_log(LOG_TYPE_SYSLOG,LOG_LEVEL_EMPTY,NULL);
+	zabbix_open_log(LOG_TYPE_SYSLOG, LOG_LEVEL_EMPTY, NULL);
 
-	switch(task)
+	switch (task)
 	{
 		case ZBX_TASK_PRINT_SUPPORTED:
+			load_user_parameters(1);
 			test_parameters();
 			exit(-1);
 			break;
 		case ZBX_TASK_TEST_METRIC:
+			load_user_parameters(1);
 			test_parameter(TEST_METRIC, PROCESS_TEST);
 			exit(-1);
 			break;
@@ -175,14 +172,12 @@ int	main(int argc, char **argv)
 			break;
 	}
 
-#if !defined(_WINDOWS)
-	signal( SIGINT,  child_signal_handler);
-	signal( SIGTERM, child_signal_handler );
-	signal( SIGQUIT, child_signal_handler );
-	signal( SIGALRM, child_signal_handler );
+	signal(SIGINT,  child_signal_handler);
+	signal(SIGTERM, child_signal_handler);
+	signal(SIGQUIT, child_signal_handler);
+	signal(SIGALRM, child_signal_handler);
 
 	alarm(CONFIG_TIMEOUT);
-#endif /* not WONDOWS */
 
 	zbx_tcp_init(&s_in, (ZBX_SOCKET)fileno(stdin));
 	zbx_tcp_init(&s_out, (ZBX_SOCKET)fileno(stdout));
@@ -214,7 +209,7 @@ int	main(int argc, char **argv)
 
 		if( FAIL == ret )
 		{
-			zabbix_log(LOG_LEVEL_DEBUG, "Processing  error: %s", zbx_tcp_strerror());
+			zabbix_log(LOG_LEVEL_DEBUG, "Processing error: %s", zbx_tcp_strerror());
 		}
 	}
 
@@ -223,9 +218,8 @@ int	main(int argc, char **argv)
 	free_metrics();
 	alias_list_free();
 
-#if !defined(_WINDOWS)
 	alarm(0);
-#endif /* not WONDOWS */
+
 	zabbix_close_log();
 
 	return SUCCEED;
