@@ -94,8 +94,6 @@ char *help_message[] = {
 	"  -p --print            print supported metrics and exit",
 	"  -t --test <metric>    test specified metric and exit",
 /*	"  -u --usage <metric> test specified metric and exit",	*/ /* !!! TODO - print metric usage !!! */
-	"",
-	"Note that -t and -p switches do not work with user parameters. Use zabbix_get instead.",
 
 #if defined (_WINDOWS)
 
@@ -254,7 +252,7 @@ int MAIN_ZABBIX_ENTRY(void)
 
 	init_collector_data();
 
-	load_user_parameters();
+	load_user_parameters(0);
 
 	/* --- START THREADS ---*/
 
@@ -398,11 +396,19 @@ int	main(int argc, char **argv)
 			break;
 #endif /* _WINDOWS */
 		case ZBX_TASK_PRINT_SUPPORTED:
+#if defined (_WINDOWS)
+			init_collector_data(); /* required for reading PerfCounter */
+#endif /* _WINDOWS */
+			load_user_parameters(1);
 			test_parameters();
 			free_metrics();
 			exit(SUCCEED);
 			break;
 		case ZBX_TASK_TEST_METRIC:
+#if defined (_WINDOWS)
+			init_collector_data(); /* required for reading PerfCounter */
+#endif /* _WINDOWS */
+			load_user_parameters(1);
 			test_parameter(TEST_METRIC, PROCESS_TEST);
 			exit(SUCCEED);
 			break;
